# dimigo

study-aifuture/: README.md
study-aifuture/notebooks/: 2-머신러닝-지도학습(분류).ipynb  3-머신러닝-지도학습(회귀)_3323_사호준.ipynb  4- 머신러닝-비지도학습(차원축소)_3323_사호준.ipynb  4-머신러닝-비지도학습(계층적군집화)_3323_사호준.ipynb  4-머신러닝-비지도학습(군집화)_3323_사호준.ipynb  5-딥러닝-경사하강법_3323_사호준.ipynb  5-딥러닝-과대적합_3323_사호준.ipynb  5-딥러닝-손실함수_3323_사호준.ipynb  5-딥러닝-인공신경망(MNIST)_3323_사호준.ipynb  5-딥러닝-퍼셉트론_3323_사호준.ipynb  6-합성곱신경망-MNIST_3323_사호준.ipynb  6-합성공신경망-CIFAR10_3323_사호준.ipynb  7-순환신경망-GRU-3323_사호준.ipynb  7-순환신경망-LSTM-3323_사호준.ipynb  7-순환신경망-MultiLayerRNN_3323_사호준.ipynb  7-순환신경망-SimpleRNN_3323_사호준.ipynb  8.인공지능 프로젝트(청와대 청원).ipynb
study-aifuture/other/: first.html  hello.html  hello_flask.py  minmax_scaler.pkl  my_model.h5  second.html
study-bigdata/: .gitignore  README.md  requirements.txt
study-bigdata/40_데이터분석 실습/: population.csv  seoul_temperature.csv
study-c/: .gitignore  README.md
study-db/: 3323사호준_DB 2학기 수행평가.docx  README.md  db_1.R  db_2.R  db_3.R  db_suhaeng.R  db_suhaeng_3323사호준.Rmd
study-eunggae/: README.md
study-eungprhwa/: README.md
study-python/: README.md
study-python/2020_2nd/: 20200911_1315.py  20200914_1315.py  20200918_1315.py  20200921_1315.py  20201005_1315.py  20201012_1315.py  20201016_1315.py  20201019_1315.py  20201023_1315.py  20201102_1315.py  20201106_1315.py  20201112_1315.py  20201112_1315a.py  pyproject.toml  w1315_20201113.py  w1315_20201123.py  w1315_20201127.py  w1315_20201130.py  w1315_20201204.py  w1315_20201228.py  w1315_stack_exec.py
study-syspr/: README.md
(+234 files in other folders)
