[tool.poetry]
name = "2020_2nd"
version = "0.1.0"
description = ""
authors = ["sqrtpi177 <solar0037@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.3"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
